uefi-macros/tests/ui/guid_bad_hex_group5.stderr
error: GUID component "aaaaaaaaaaaG" is not a hexadecimal number
 --> tests/ui/guid_bad_hex_group5.rs:5:59
  |
5 | const BadHexGroup5: Guid = guid!("aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaG");
  |                                                           ^^^^^^^^^^^^
